--- a/TODO-archive.org
+++ b/TODO-archive.org
@@ -34,3 +34,12 @@ Archived entries from file /home/nrvale0/workspace/gitlab/nrvale0/sandbox-tf-vau
   :ARCHIVE_CATEGORY: TODO
   :ARCHIVE_TODO: done
   :END:
+
+* done default all variables except cloud credentials
+  :PROPERTIES:
+  :ARCHIVE_TIME: 2018-10-11 Thu 14:31
+  :ARCHIVE_FILE: ~/workspace/gitlab/nrvale0/sandbox-tf-vault-consul-puppet/TODO.org
+  :ARCHIVE_OLPATH: Terraform
+  :ARCHIVE_CATEGORY: TODO
+  :ARCHIVE_TODO: done
+  :END:
