getting close to a bootstrap script for consul clients

--- a/TODO.org
+++ b/TODO.org
@@ -8,6 +8,10 @@
 ** maybe create the build tools container
 ** maybe trigger TFE runs from GitlabCI
 ** todo AWS Puppet infra
+*** next Add SG to allow Internet to talk to the Puppet master
+    SCHEDULED: <2018-10-12 Fri>
+*** todo consul_client_bootstrap script registers with the Puppet master
+    SCHEDULED: <2018-10-12 Fri>
 *** todo agent(s) with Vault integration
     blocked on control repo
 ** todo Identify a good Connect demo
