--- a/TODO-archive.org
+++ b/TODO-archive.org
@@ -43,3 +43,13 @@ Archived entries from file /home/nrvale0/workspace/gitlab/nrvale0/sandbox-tf-vau
   :ARCHIVE_CATEGORY: TODO
   :ARCHIVE_TODO: done
   :END:
+
+* done vSphere node
+  SCHEDULED: <2018-10-11 Thu>
+  :PROPERTIES:
+  :ARCHIVE_TIME: 2018-10-11 Thu 15:15
+  :ARCHIVE_FILE: ~/workspace/gitlab/nrvale0/sandbox-tf-vault-consul-puppet/TODO.org
+  :ARCHIVE_OLPATH: Terraform
+  :ARCHIVE_CATEGORY: TODO
+  :ARCHIVE_TODO: done
+  :END:
