--- a/TODO-archive.org
+++ b/TODO-archive.org
@@ -53,3 +53,13 @@ Archived entries from file /home/nrvale0/workspace/gitlab/nrvale0/sandbox-tf-vau
   :ARCHIVE_CATEGORY: TODO
   :ARCHIVE_TODO: done
   :END:
+
+* done Add SG to allow Internet to talk to the Puppet master
+  SCHEDULED: <2018-10-12 Fri>
+  :PROPERTIES:
+  :ARCHIVE_TIME: 2018-10-15 Mon 16:26
+  :ARCHIVE_FILE: ~/workspace/gitlab/nrvale0/sandbox-tf-vault-consul-puppet/TODO.org
+  :ARCHIVE_OLPATH: Terraform/AWS Puppet infra
+  :ARCHIVE_CATEGORY: TODO
+  :ARCHIVE_TODO: done
+  :END:
