--- a/TODO-archive.org
+++ b/TODO-archive.org
@@ -63,3 +63,15 @@ Archived entries from file /home/nrvale0/workspace/gitlab/nrvale0/sandbox-tf-vau
   :ARCHIVE_CATEGORY: TODO
   :ARCHIVE_TODO: done
   :END:
+
+* done add Papertrail to All The Things
+  :PROPERTIES:
+  :ARCHIVE_TIME: 2018-10-18 Thu 13:18
+  :ARCHIVE_FILE: ~/workspace/gitlab/nrvale0/sandbox-tf-vault-consul-puppet/TODO.org
+  :ARCHIVE_OLPATH: Terraform/AWS Puppet infra
+  :ARCHIVE_CATEGORY: TODO
+  :ARCHIVE_TODO: done
+  :END:
+  - [X] google
+  - [X] azure
+  - [X] AWS puppet master
